Bug 1579108 - Change the form in login-item to grid so that the copy buttons can reliably align r=sfoster,ntim
Implementing grid layout using flex may sometimes triggers edge cases where some columns go out of alignment. In this bug, the misalignment is due to the different length value given by -moz-available when Ubuntu font is used on the page.

Differential Revision: https://phabricator.services.mozilla.com/D100395

UltraBlame original commit: 8e5172537013a7f73eea5dd7ba0bca5bd4155bce

--- a/browser/components/aboutlogins/content/components/login-item.css
+++ b/browser/components/aboutlogins/content/components/login-item.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
  :host {
   overflow: hidden;
@@ -12,7 +12,7 @@
   --edit-delete-button-color: #4a4a4f;
 }
 
-
+/* Only overwrite the deemphasized text color in non-dark mode. */
 @media not all and (prefers-color-scheme: dark) {
   :host {
     --in-content-deemphasized-text: #737373;
@@ -63,7 +63,7 @@ form {
 input[type="password"],
 input[type="text"],
 input[type="url"] {
-  text-align: match-parent !important; 
+  text-align: match-parent !important; /* override `all: unset` in the rule below */
 }
 
 input[type="password"]:read-only,
@@ -72,15 +72,15 @@ input[type="url"]:read-only {
   all: unset;
   font-size: 1.1em;
   display: inline-block;
-  width: -moz-available;
-  background-color: transparent !important; 
+  background-color: transparent !important; /* override common.inc.css */
   text-overflow: ellipsis;
   overflow: hidden;
+  width: 100%;
 }
 
-
-
-
+/* We can't use `margin-inline-start` here because we force
+ * the input to have dir="ltr", so we set the margin manually
+ * using the parent element's directionality. */
 .detail-cell:dir(ltr) input:not([type="checkbox"]) {
   margin-left: 0;
 }
@@ -90,7 +90,7 @@ input[type="url"]:read-only {
 }
 
 .save-changes-button {
-  margin-inline-start: 0; 
+  margin-inline-start: 0; /* Align the button on the start side */
 }
 
 .header {
@@ -116,7 +116,7 @@ input[type="url"]:read-only {
   -moz-context-properties: fill;
   fill: currentColor;
   min-width: auto;
-  
+  /* See bug 1627164: In CJK locales, line break could happen in any letter of the button. The fix here is to explicitly specify flex property so that the button couldn't grow or shrink. */
   flex: 0 0 auto;
 }
 
@@ -127,12 +127,12 @@ input[type="url"]:read-only {
 
 .delete-button {
   background-image: url("chrome://global/skin/icons/delete.svg");
-  padding-inline-start: 30px; 
+  padding-inline-start: 30px; /* 8px on each side, and 14px for icon width */
 }
 
 .edit-button {
   background-image: url("chrome://browser/skin/edit.svg");
-  padding-inline-start: 32px; 
+  padding-inline-start: 32px; /* 8px on each side, and 16px for icon width */
 }
 
 input[type="url"]:read-only {
@@ -154,17 +154,39 @@ input[type="url"]:read-only:hover:active {
   align-items: center;
 }
 
+.detail-grid {
+  display: grid;
+  grid-template-columns: minmax(240px, max-content) auto;
+  grid-template-rows: auto;
+  column-gap: 20px;
+  row-gap: 40px;
+  justify-content: start;
+}
+
+:host([data-editing]) .detail-grid {
+  grid-template-columns: auto;
+}
+
+.detail-grid > .detail-row:not([hidden]) {
+  display: contents;
+}
+
+.detail-grid > .detail-row > .detail-cell {
+  grid-column: 1;
+}
+
+.detail-grid > .detail-row > .copy-button {
+  grid-column: 2;
+  margin-inline-start: 0; /* Reset button's margin so it doesn't affect the overall grid's width */
+  justify-self: start;
+  align-self: end;
+}
+
 .detail-row {
   display: flex;
 }
 
-.detail-row-contents {
-  display: flex;
-  align-items: end;
-  flex-basis: 340px; 
-  max-width: 100%;
-}
-
+.detail-grid,
 .detail-row,
 .form-actions-row {
   margin-bottom: 40px;
@@ -172,7 +194,7 @@ input[type="url"]:read-only:hover:active {
 
 .detail-cell {
   flex-grow: 1;
-  min-width: 0; 
+  min-width: 0; /* Allow long passwords to collapse down to flex item width */
 }
 
 .field-label {
@@ -187,8 +209,7 @@ input[type="url"]:read-only:hover:active {
 }
 
 .copy-button {
-  margin-bottom: 0; 
-  margin-inline-start: 20px;
+  margin-bottom: 0; /* Align button at the bottom of the row */
 }
 
 .copy-button:not([data-copied]) .copied-button-text,
@@ -197,9 +218,9 @@ input[type="url"]:read-only:hover:active {
 }
 
 .copy-button[data-copied] {
-  color: var(--success-color) !important; 
+  color: var(--success-color) !important; /* override common.css */
   background-color: transparent;
-  opacity: 1; 
+  opacity: 1; /* override common.css fading out disabled buttons */
 }
 
 .copy-button[data-copied]:-moz-focusring {
@@ -235,11 +256,11 @@ input[type="url"]:read-only:hover:active {
 
 input.password-display,
 input[name="password"] {
-  font-family: monospace !important; 
+  font-family: monospace !important; /* override `all: unset` in the rule above */
 }
 
 .reveal-password-checkbox {
-  
+  /* !important is needed to override common.css styling for checkboxes */
   background-color: transparent !important;
   border-width: 0 !important;
   background-image: url("chrome://browser/content/aboutlogins/icons/show-password.svg") !important;
@@ -266,10 +287,10 @@ input[name="password"] {
 
 .reveal-password-checkbox:-moz-focusring {
   outline: 2px solid var(--in-content-border-active);
-  
+  /* offset outline to align with 1px border-width set for buttons/menulists above. */
   outline-offset: -1px;
-  
-
+  /* Make outline-radius slightly bigger than the border-radius set above,
+   * to make the thicker outline corners look smooth */
   -moz-outline-radius: 3px;
   box-shadow: 0 0 0 4px var(--in-content-border-active-shadow);
 }
